Installed latest abc-tutorial
and slight change to look-and-feel of legends.

--- a/app/views/advancedsearch.scala.html
+++ b/app/views/advancedsearch.scala.html
@@ -12,7 +12,7 @@
         @helper.form(action = routes.Application.processAdvancedSearch, 'id -> "advancedsearchform", 'enctype -> "application/x-www-form-urlencoded" ) {
         <!--form id="advancedsearchform" name="Search" action="searchresult.html" method="POST" enctype="application/x-www-form-urlencoded" -->
            <fieldset>
-            <legend >advanced search</legend>
+            <legend >Advanced Search</legend>
              <ul>
               <li>
                <label for="genre" class="advancedsearch" >genre:</label>
