--- a/app/views/newtune.scala.html
+++ b/app/views/newtune.scala.html
@@ -12,7 +12,7 @@
        <!--form name="newtuneform" action="defertobuttons" enctype="text/plain" method="POST"-->
        @helper.form(action = routes.Application.processTune, 'id -> "newtuneform" ) {
           <fieldset>
-            <legend >new tune</legend>
+            <legend >New Tune</legend>
              <ul>
               <li>
                <label  class="newtune" for="genre">genre:</label>
