--- a/app/views/uploadtune.scala.html
+++ b/app/views/uploadtune.scala.html
@@ -8,7 +8,7 @@
 
    @helper.form(action = routes.Application.processUpload, 'enctype -> "multipart/form-data", 'id -> "uploadtuneform" ) {    
      <fieldset>
-       <legend >upload tune</legend>
+       <legend >Upload Tune</legend>
           <ul>
             <li>
              <p>Upload an ABC file to the @genre genre. (The file extension should be <em>.txt</em> although some browsers support <em>.abc</em>)</p>
