--- a/app/views/search.scala.html
+++ b/app/views/search.scala.html
@@ -13,7 +13,7 @@
          @helper.form(action = routes.Application.processSearch, 'id -> "searchform", 'enctype -> "application/x-www-form-urlencoded" ) {
           
            <fieldset>
-            <legend >tune search</legend>
+            <legend >Tune Search</legend>
              <ul>
               <li>
                @helper.inputText(searchForm("name"), 'name -> "name:", '_class -> "search")
