Integrated the Elm abc editor-controller
(And replaced the Elm 0.16 ABC tutorial with this Elm 0.17 editor).

--- a/app/views/help.scala.html
+++ b/app/views/help.scala.html
@@ -70,10 +70,12 @@
        Alternatively, the new tune page has a button labelled 'try it out' which allows you to look at the score but doesn't save the tune
        to the database.  Again you can keep trying with edited versions of the tune until you are happy with the score and can submit it.
        </p>
-       <h2>How do I learn ABC?</h2>
-       <p>You could start by taking a look at the <a href='abctutorial'>interactive ABC tutorial</a>.  This has a set of lessons, starting very simply 
-       with just the  notes A,B and C and ending with complete tunes.  At each stage you can experiment with the ABC and listen to the results.  
-       There are also more detailed <a href='http://abcnotation.com/learn'>tutorials</a> which are not interactive.
+       <h2>How do I create an ABC file?</h2>
+       <p>You could start by taking a look at a tutorial - for example <a href='http://abcnotation.com/learn'>this one</a>.
+       You can also experiment by using the interactive <a href='abceditor'>ABC editor</a>.  This allows you to build up your
+       ABC text gradually.  If it is correct, a player will appear allowing you to hear what you've written; if incorrect, you
+       will see an error message.  You can also use it to change octave or transpose to a different key.  Once you are happy,
+       you can save the ABC to file and load it to tradtunedb in the normal fashion.
        </p>
        <h2>How do I submit a comment?</h2>
        <p>Comments are intended to hold additional information about each tune.  They are particularly useful if you find a YouTube video of the tune 
