--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -17,6 +17,7 @@
         <meta name="robots" content="noindex,follow" />
         <link href='http://fonts.googleapis.com/css?family=Fondamento' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/base.css")?version=110">   
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/abcplayer.css")">   
           <!-- MIDI.js player css -->
           <link rel="stylesheet" media="screen" href="@routes.Assets.at("MIDI.js/css/MIDIPlayer.css")" >
           <!-- end of MIDI.js player css -->
@@ -24,8 +25,9 @@
         <script src="@routes.Assets.at("javascripts/jquery-2.0.3.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/tradtunestore.js")?version=110" type="text/javascript"></script>
 
- @if(title.equals ("abctutorial")) { 
-        <script src="@routes.Assets.at("javascripts/abc-player.js")" type="text/javascript"></script>
+ @if(title.equals ("abceditor")) { 
+        <script src="@routes.Assets.at("javascripts/elmAbcEditorController.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/soundfont-player.js")" type="text/javascript"></script>
         }
  @if(true) {  
           <!-- midi.js package -->
@@ -83,8 +85,8 @@
                @if(!(title == "about")) {
                  <a href="/about" >about</a>
                }           
-               @if(!(title == "abctutorial")) {
-                 <a href="/abctutorial" >abc tutorial</a>
+               @if(!(title == "abceditor")) {
+                 <a href="/abceditor" >abc editor</a>
                }           
                @if(!(title == "credits")) {
                  <a href="/credits" >credits</a>
@@ -105,11 +107,14 @@
    </div>
 <!-- #container -->	
 </body> 
-<!-- elm code for the ABC tutorial -->	
-@if(title.equals ("abctutorial")) { 
+<!-- elm code for the ABC editor -->	
+@if(title.equals ("abceditor")) { 
     <script type="text/javascript">
-       var abcDiv = document.getElementById('abc');
-       Elm.embed(Elm.Main, abcDiv);
-}
+       var node = document.getElementById('elmAbcEditorController');
+       var myapp = Elm.AbcEditorController.embed(node); 
     </script>
+    <script src="@routes.Assets.at("javascripts/nativeFileIO.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/nativeSoundFont.js")" type="text/javascript"></script>
+}
+  
 </html>
