--- a/app/views/acknowledge.scala.html
+++ b/app/views/acknowledge.scala.html
@@ -2,7 +2,7 @@
 
 @import snippets._
 
-@main("acknowldege")(None)(userName)(navigation("home")(userName)) {         
+@main("acknowldege", None, userName, navigation("home")(userName)) {         
     <div id="acknowledgediv" role="main" class="main" >
           <p>@message</p>
     </div>
