--- a/app/views/commentEdit.scala.html
+++ b/app/views/commentEdit.scala.html
@@ -17,7 +17,7 @@
    </div>
 }
 
-@main("Edit comment")(None)(userName)(navigation("home")(userName)) {
+@main("Edit comment", None, userName, navigation("home")(userName)) {
     <div id="commentdiv" >     
     
  
