--- a/app/views/credits.scala.html
+++ b/app/views/credits.scala.html
@@ -2,7 +2,7 @@
 
 @import snippets._
 
-@main("credits")(None)(userName)(navigation("home")(userName)) {         
+@main("credits", None, userName, navigation("home")(userName)) {         
     <div id="creditsdiv" role="main" class="main" >
           <p>TradTuneDb uses <a href="http://abcnotation.com/">ABC notation</a> and so obviously owes a tremendous debt to Chris Walshaw who developed it. 
  It uses the <a href="https://github.com/newlandsvalley/musicrest">MusicRest</a> web service for storing and transcoding its tunes. This in turn transcodes by means of:</p>
