--- a/app/views/helloworld.scala.html
+++ b/app/views/helloworld.scala.html
@@ -2,7 +2,7 @@
 
 @import snippets._
 
-@main("hello")(None)(userName)(navigation("login")(userName)) {
+@main("hello", None, userName, navigation("login")(userName)) {
   <div id="hello" role="main" class="main" >
    <p>Hello World: @message</p>
   </div>
