--- a/app/views/helpmidi2abc.scala.html
+++ b/app/views/helpmidi2abc.scala.html
@@ -2,7 +2,7 @@
 
 @import snippets._
 
-@main("help")(None)(userName)(navigation("home")(userName))  {         
+@main("help", None, userName, navigation("home")(userName))  {         
     <div id="helpdiv" role="main" class="main" >      
        <h2>How do I submit a midi tune?</h2>
        <p>The original intention of midi2abc was to allow you to use a midi piano or a similar device as an input method 
