--- a/app/views/newtune.scala.html
+++ b/app/views/newtune.scala.html
@@ -6,7 +6,7 @@
 
 @onLoad=@{Utils.onLoadCommand1(genre)}
 
-@main("new tune")(onLoad)(userName)(navigation("newtune")(userName)) {         
+@main("new tune", onLoad, userName, navigation("newtune")(userName)) {         
     <div id="newtunediv" role="main" class="main" >
 
        <!--form name="newtuneform" action="defertobuttons" enctype="text/plain" method="POST"-->
