--- a/app/views/trytune.scala.html
+++ b/app/views/trytune.scala.html
@@ -7,7 +7,7 @@
  tuneUrl + "/temporary" +"/png"
 }
 
-@main("tune")(None)(userName)(navigation("home")(userName)) {         
+@main("tune", None, userName, navigation("home")(userName)) {         
       <div  id="tunediv"  role="main" class="main" >
          <!--img src="@tuneUrl/png" alt="@name from genre @genre" width="494" height="345" /-->       
          <img src="@imageUrl" alt="@name from genre @genre"/> 
