--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(onload: Option[scala.xml.Unparsed])(userName: Option[String])(navigation: Html)(content: Html)
+@(title: String, onload: Option[scala.xml.Unparsed], userName: Option[String], navigation: Html, scripts: Html = Html(""))(content: Html)
 
 
 <!DOCTYPE html>
@@ -24,12 +24,7 @@
         <link rel="shortcut icon" href="@routes.Assets.at("images/favicon.ico")" >
         <script src="@routes.Assets.at("javascripts/jquery-2.0.3.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/tradtunestore.js")?version=110" type="text/javascript"></script>
-
- @if(title.equals ("abceditor")) { 
-        <script src="@routes.Assets.at("javascripts/elmAbcEditorController.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/soundfont-player.js")" type="text/javascript"></script>
-        }
- @if(true) {  
+@if(true) {  
           <!-- midi.js package -->
           <script src="@routes.Assets.at("MIDI.js/js/MIDI/AudioDetect.js")" type="text/javascript"></script>
           <script src="@routes.Assets.at("MIDI.js/js/MIDI/LoadPlugin.js")" type="text/javascript"></script>
@@ -88,6 +83,9 @@
                @if(!(title == "abceditor")) {
                  <a href="/abceditor" >abc editor</a>
                }           
+               @if(!(title == "abctutorial")) {
+                 <a href="/abctutorial" >abc tutorial</a>
+               }           
                @if(!(title == "credits")) {
                  <a href="/credits" >credits</a>
                }
@@ -105,16 +103,7 @@
      </div>
      <!-- #page -->	
    </div>
-<!-- #container -->	
-</body> 
-<!-- elm code for the ABC editor -->	
-@if(title.equals ("abceditor")) { 
-    <script type="text/javascript">
-       var node = document.getElementById('elmAbcEditorController');
-       var myapp = Elm.AbcEditorController.embed(node); 
-    </script>
-    <script src="@routes.Assets.at("javascripts/nativeFileIO.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/nativeSoundFont.js")" type="text/javascript"></script>
-}
-  
+   @scripts
+<!-- #container -->
+</body>   
 </html>
