Upgraded to latest elm-gererated JS
This relaxes the parser to allow some degenerate forms of repeat section markers.  Also updated the credits page to include the latest elm code.

--- a/app/views/credits.scala.html
+++ b/app/views/credits.scala.html
@@ -20,8 +20,8 @@
                 <td><a href="http://abc.sourceforge.net/abcMIDI/">abcMIDI</a></td>
              </tr>
           </table>
-          <p>It uses the <a href="http://mudcu.be/midi-js/">MIDI.js</a> midi player to play tunes.
-          <p>Code is written in scala, with particular thanks to the following:</p>         
+          <p>It uses the <a href="http://mudcu.be/midi-js/">MIDI.js</a> midi player to play tunes which have been saved to the database and the <a href="https://github.com/danigb/soundfont-player">soundfont player</a> from danigb for tunes played in the ABC editor and tutorial.</p>
+          <p>Code is written in scala and <a href="http://elm-lang.org/">elm</a>, with particular thanks to the following:</p>         
           <table id="samplesearch" >
              <tr>
                 <td>content negotiation:</td>
@@ -38,6 +38,10 @@
              <tr>
                 <td>JSON:</td>
                 <td><a href="http://argonaut.io/">argonaut</a></td>
+             </tr>
+             <tr>
+                <td>ABC parsing:</td>
+                <td><a href="https://github.com/Bogdanp/elm-combine">elm-combine</a> from Bogdan Popa</td>
              </tr>
           </table>
 
