Small correction to help on advanced search view

--- a/app/views/advancedsearch.scala.html
+++ b/app/views/advancedsearch.scala.html
@@ -39,7 +39,7 @@
                 <td>'sligo' in the name</td>
              </tr>
              <tr>
-                <td>R=slip+jig</td>
+                <td>R=slip jig</td>
                 <td>slip jigs</td>
              </tr>
              <tr>
