--- a/app/views/abceditor.scala.html
+++ b/app/views/abceditor.scala.html
@@ -6,12 +6,14 @@
 @scripts = {    
     <script src="@routes.Assets.at("javascripts/elmAbcEditorController.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("javascripts/soundfont-player.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/vextab-div.js")" type="text/javascript"></script>
     <script type="text/javascript">
        var node = document.getElementById('elmAbcEditorController');
        var myapp = Elm.AbcEditorController.embed(node); 
     </script>
     <script src="@routes.Assets.at("javascripts/nativeFileIO.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("javascripts/nativeSoundFont.js")" type="text/javascript"></script>
+    <script src="@routes.Assets.at("javascripts/nativeVexTab.js")" type="text/javascript"></script>
 }
 
 @main("abceditor", None, userName, navigation("home")(userName), scripts) {         
