Added VexFlow to the credits page

--- a/app/views/credits.scala.html
+++ b/app/views/credits.scala.html
@@ -20,7 +20,9 @@
                 <td><a href="http://abc.sourceforge.net/abcMIDI/">abcMIDI</a></td>
              </tr>
           </table>
-          <p>It uses the <a href="http://mudcu.be/midi-js/">MIDI.js</a> midi player to play tunes which have been saved to the database and the <a href="https://github.com/danigb/soundfont-player">soundfont player</a> from danigb for tunes played in the ABC editor and tutorial.</p>
+          <p>It uses the <a href="http://mudcu.be/midi-js/">MIDI.js</a> midi player to play tunes which have been saved to the database and the 
+            <a href="https://github.com/danigb/soundfont-player">soundfont player</a> from danigb for tunes played in the ABC editor and tutorial. It uses 
+           <a href="http://www.vexflow.com/">VexFlow</a> for dynamic score engraving in the editor.</p>
           <p>Code is written in scala and <a href="http://elm-lang.org/">elm</a>, with particular thanks to the following:</p>         
           <table id="samplesearch" >
              <tr>
