Sort out dropdown menu highlighting
All three ABC submenu items now take a context of 'abc' which means that the abcmenu option can be highlighted appropriately when it is selected by any of them (to indicate it is the current choice).

--- a/app/views/abceditor.scala.html
+++ b/app/views/abceditor.scala.html
@@ -16,7 +16,7 @@
     <script src="@routes.Assets.at("javascripts/nativeVexTab.js")" type="text/javascript"></script>
 }
 
-@main("abceditor", None, userName, navigation("home")(userName), scripts) {         
+@main("abceditor", None, userName, navigation("abc")(userName), scripts) {         
     <div id="abcdiv" role="main" class="main" >
        <div id = "elmAbcEditorController">
        </div>
