--- a/app/views/abctutorial.scala.html
+++ b/app/views/abctutorial.scala.html
@@ -13,7 +13,7 @@
     <script src="@routes.Assets.at("javascripts/nativeSoundFont.js")" type="text/javascript"></script>
 }
 
-@main("abctutorial", None, userName, navigation("home")(userName), scripts) {         
+@main("abctutorial", None, userName, navigation("abc")(userName), scripts) {         
     <div id="abcdiv" role="main" class="main" >
        <div id = "elmAbcTutorial">
        </div>
