--- a/app/views/snippets/navigation.scala.html
+++ b/app/views/snippets/navigation.scala.html
@@ -2,10 +2,11 @@
 @import snippets._
 @import utils._
 
+
 @navigationlink("/home")(Utils.cssClass("home", context))("home") 
 @navigationlink("/newtune")(Utils.cssClass("newtune", context))("new tune")
 @navigationlink("/upload")(Utils.cssClass("upload", context))("upload")
-@abcDropdown(Utils.cssClass("midi2abc", context))
+@abcDropdown(Utils.cssClass("abc", context))
 @(userName match {
      case Some("administrator")  => navigationlink("/users")(Utils.cssClass("users", context))("users")   
      case _ =>  None
