--- a/app/views/usersresults.scala.html
+++ b/app/views/usersresults.scala.html
@@ -17,7 +17,7 @@
           @results 
           <nav role="navigation">
            <ul class="pagination">
-             @pageLinks("scandi", None, "alphabetic", currentPage, totalPages)
+             @userPageLinks(currentPage, totalPages)
            </ul>
           </nav>         
     </div>
