--- a/app/views/abctutorial.scala.html
+++ b/app/views/abctutorial.scala.html
@@ -2,23 +2,27 @@
 
 @import snippets._
 
-<!-- elm code for the ABC tutorial -->	
-@scripts = {    
+<!-- elm code for the ABC tutorial -->
+@scripts = {
+    <!--
     <script src="@routes.Assets.at("javascripts/elmAbcTutorial.js")" type="text/javascript"></script>
     <script src="@routes.Assets.at("javascripts/soundfont-player.js")" type="text/javascript"></script>
     <script type="text/javascript">
        var node = document.getElementById('elmAbcTutorial');
-       var myapp = Elm.AbcTutorial.embed(node); 
+       var myapp = Elm.AbcTutorial.embed(node);
     </script>
     <script src="@routes.Assets.at("javascripts/nativeSoundFont.js")" type="text/javascript"></script>
+  -->
+  <script src="@routes.Assets.at("javascripts/abc-tutorial.js")" type="text/javascript"></script>
 }
 
-@main("abctutorial", None, userName, navigation("abc")(userName), scripts) {         
+@main("abctutorial", None, userName, navigation("abc")(userName), scripts) {
     <div id="abcdiv" role="main" class="main" >
+      <!--  we use p as the placeholder for the running code  -->
+      </p>
+      <!--
        <div id = "elmAbcTutorial">
        </div>
+      -->
     </div>
 }
-
-
-
