--- a/app/views/abctutorial.scala.html
+++ b/app/views/abctutorial.scala.html
@@ -4,25 +4,15 @@
 
 <!-- elm code for the ABC tutorial -->
 @scripts = {
-    <!--
-    <script src="@routes.Assets.at("javascripts/elmAbcTutorial.js")" type="text/javascript"></script>
-    <script src="@routes.Assets.at("javascripts/soundfont-player.js")" type="text/javascript"></script>
-    <script type="text/javascript">
-       var node = document.getElementById('elmAbcTutorial');
-       var myapp = Elm.AbcTutorial.embed(node);
-    </script>
-    <script src="@routes.Assets.at("javascripts/nativeSoundFont.js")" type="text/javascript"></script>
-  -->
   <script src="@routes.Assets.at("javascripts/abc-tutorial.js")" type="text/javascript"></script>
 }
 
 @main("abctutorial", None, userName, navigation("abc")(userName), scripts) {
     <div id="abcdiv" role="main" class="main" >
-      <!--  we use p as the placeholder for the running code  -->
-      </p>
-      <!--
-       <div id = "elmAbcTutorial">
-       </div>
-      -->
+      <!--  we use this div  as the placeholder for the running PureScript code  -->
+      <div id= "embed-ps-div">
+        <!-- and place an element inside to avoid its being optimised away -->
+        </p>
+      </div>
     </div>
 }
