--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -9,8 +9,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -28,7 +28,7 @@ em { font-style: italic;
 }
 
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -76,7 +76,7 @@ h1 {
 	font-size: 1.5em; /* 24px/16px */
 	margin-bottom: .75em;
 	text-transform: lowercase;
-}        
+}
 
 h2 {
 	font-size: 1.375em; /* 22px/16px */
@@ -106,7 +106,7 @@ a:visited {
 a:focus,
 a:hover,
 a:active {
-        color: black; 
+        color: black;
 	background: #f3f6c6;
 	text-decoration: none;
 }
@@ -117,7 +117,7 @@ a:hover.current {
 	text-decoration: none;
 }
 
-/* EXPERIMENTAL 
+/* EXPERIMENTAL
 ---------------------------------------------- */
 
 /* Contain floats: h5bp.com/q */
@@ -138,7 +138,7 @@ fieldset {
 }
 
 legend ul {
-  background-color: #fff; 
+  background-color: #fff;
   border: 1px solid #eaeaea;
   list-style: none;
   margin: 12px;
@@ -180,11 +180,11 @@ label.newtune,
   width: 75px;
 }
 
-.login label { 
+.login label {
   width: 100px;
 }
- 
-.newuser label { 
+
+.newuser label {
   width: 140px;
 }
 /* end of form alignment */
@@ -208,9 +208,9 @@ input[type="email"],
 input[type="password"],
 input[type="text"] {
 	padding: 2px 3px;
-    color: black; 
+    color: black;
     background: #f3f6c6;
-	width: 200px; 
+	width: 200px;
 }
 
 input[type="textarea"] {
@@ -231,7 +231,7 @@ input[type='submit'] {
 	color: black;
 	margin: 12px;
 	/* padding: 8px; */
-	padding: 5px; 
+	padding: 5px;
         -webkit-transition-duration: 0.2s;
         -moz-transition-duration: 0.2s;
         transition-duration: 0.2s;
@@ -247,7 +247,7 @@ input[type="submit"].delete {
   background: transparent;
   color: blue;
   margin: none;
-  padding: none;	
+  padding: none;
   text-decoration: underline;
   box-shadow: none;
 }
@@ -259,15 +259,15 @@ input[type="text"]#searchcriteria {
 }
 
 /* a comment subject */
-input[type="text"]#subject {	
-	width: 250px; 
+input[type="text"]#subject {
+	width: 250px;
 }
 
 .input_tip {
   font-size: 70%;
   padding: 3px 6px;
-  text-align: left; 
-  height: 5px; 
+  text-align: left;
+  height: 5px;
   margin: 0 auto 20px auto;
 }
 
@@ -323,62 +323,62 @@ span.help {
 ---------------------------------------------- */
 
 #searchdiv,
-#commentdiv { 
+#commentdiv {
   width: 50%;
   margin-left: auto;
   margin-right: auto;
 }
 
-#advancedsearchdiv { 
+#advancedsearchdiv {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
 }
 
-#searchresultsdiv { 
+#searchresultsdiv {
   width: 60%;
   margin-left: auto;
   margin-right: auto;
 }
 
 #acknowledgediv,
-#logindiv { 
+#logindiv {
   width: 50%;
   margin-left: auto;
   margin-right: auto;
 }
 
 
-#tunediv { 
+#tunediv {
   width: 90%;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 250px; 
+  margin-bottom: 250px;
 }
 
-#abcdiv { 
+#abcdiv {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 250px; 
+  margin-bottom: 250px;
 }
 
 
 #contactdiv,
 #helpdiv,
-#creditsdiv { 
+#creditsdiv {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
 }
 
-#newtunediv { 
+#newtunediv {
   width: 60%;
   margin-left: auto;
   margin-right: auto;
 }
 
-#uploadtunediv { 
+#uploadtunediv {
   width: 35%;
   margin-left: auto;
   margin-right: auto;
@@ -388,7 +388,7 @@ span.help {
     float: left;
 }
 
-#metadatadiv { 
+#metadatadiv {
   width: 820px;
   margin-left: auto;
   margin-right: auto;
@@ -396,7 +396,7 @@ span.help {
 
 
 
-div#user {    
+div#user {
   text-align: right;
   padding-right: 20px;
   display: block;
@@ -422,7 +422,7 @@ td {
 }
 
 .tunelist table tr td a:hover {
-   color: black;   
+   color: black;
    text-decoration: underline;
    background: transparent;
 }
@@ -433,7 +433,7 @@ td {
 }
 
 .userlist table tr td a:hover {
-   color: black;   
+   color: black;
    text-decoration: underline;
    background: transparent;
 }
@@ -445,14 +445,14 @@ table.textalign tr td  {
 
 
 
-/* Just a simple list of text items 
+/* Just a simple list of text items
 ---------------------------------------------- */
 .textList {
 	list-style: none;
 }
 
 .textList li {
-	margin: 10px 30px; 
+	margin: 10px 30px;
 }
 
 
@@ -471,15 +471,15 @@ img {
 audio {
  width: 240px;
  height: 30px;
- padding: 1em; 
- background: #fff; 
+ padding: 1em;
+ background: #fff;
  border: #224422; /* hard dark green */
  /* border: medium solid black; */
  border-style: ridge;
  border-width: 6px;
  -moz-border-radius: 6px;
  border-radius: 6px;
-} 
+}
 
 /* CONTAINERS
 ---------------------------------------------- */
@@ -491,8 +491,8 @@ audio {
 #page {
 	background: #fff;
 	padding: 0 10px 10px 0;
-	# max-width: 940px; 
-	width: 97.9167%; 
+	# max-width: 940px;
+	width: 97.9167%;
 }
 
 .main {
@@ -517,28 +517,28 @@ audio {
 
 /* Logo */
 .mainlogo {
-   height: 60px; 
-   line-height:60px; 
+   height: 60px;
+   line-height:60px;
    clear: both;
    margin: 0;
    /* font-size: 100%; */
    font-family: 'Fondamento', cursive;
    display:inline;
-   vertical-align: bottom; 
+   vertical-align: bottom;
 }
 
-.mainlogoprefix { 
+.mainlogoprefix {
    float: left;
    color: green;
    font-size: 250%;
-   vertical-align: bottom; 
+   vertical-align: bottom;
 }
 
-.mainlogosuffix { 
+.mainlogosuffix {
 	float: left;
     color: black;
 	font-size: 125%;
-    vertical-align: bottom; 
+    vertical-align: bottom;
     line-height: 70px;
 }
 
@@ -550,15 +550,13 @@ audio {
     width: 100%;
 }
 
- 
+
 /* Site Nav - the upper navigation bar */
 
-/* new for dropdown */
 .nav {
-    overflow: hidden;
+		overflow: hidden;
+		list-style-type: none;  /* don't display the bullets in the nav bar */
 }
-
-/* end */
 
 .nav li {
 	float: left;
@@ -569,11 +567,11 @@ audio {
 
 .nav li a {
         display: inline-block;
-	font-size: 1.5em; /* 18px/12px */  /* makes the linked text larger than the bullets */
+	      font-size: 1.5em; /* 18px/12px */  /* makes the linked text larger than the bullets */
         color: #cccc99; /* light greenish grey */
         text-decoration: none;
         list-style-type: none;
-}	
+}
 
 .nav li:first-child {
 	list-style: none;
@@ -581,13 +579,13 @@ audio {
 }
 
 .nav li:last-child {
-        float: right;  
+        float: right;
 	padding-right: 20px;
 }
 
 .nav li a.current,
 .nav li a:hover {
-        color: white;   
+        color: white;
         background-color: #224422; /* hard dark green */
 }
 
@@ -596,7 +594,7 @@ audio {
 
 .dropdown-content {
     display: none;
-    position: absolute; 
+    position: absolute;
     background-color: #224422; /* hard dark green */
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -619,7 +617,7 @@ audio {
 
 /** definition lists */
 
-dl {  
+dl {
     padding: 0.5em;
   }
   dt {
@@ -634,12 +632,12 @@ dl {
   dd {
     margin: 0 0 0 110px;
     width: 400px;
-    padding: 0 0 0.3em 0; 
+    padding: 0 0 0.3em 0;
   }
 
 /** the metadata form */
 
-dl.metadata {  
+dl.metadata {
     padding: 0;
 }
 
@@ -655,7 +653,7 @@ dl.metadata {
 .metadata dd {
     margin: 0 0 0 314px;
     width: 400px;
-    padding: 0 0, 0.3em 0; 
+    padding: 0 0, 0.3em 0;
 }
 
 /* label alignment in metadata forms */
@@ -679,31 +677,31 @@ dl.metadata {
 
 .pagination li {
    float: left;
-   padding: 3.5px 4px 3.5px 4px; 
+   padding: 3.5px 4px 3.5px 4px;
    font-size: .90em;
    list-style-type: none;
    display: inline;
 }
 
 .pagination li:last-child {
-    float: left;  
+    float: left;
     padding-right: 20px;
 }
 
-.pagination li a {  
+.pagination li a {
    color: blue;
    text-decoration: none;
    display: inline-block;
 }
 
 .pagination li a:hover {
-   color: black;   
+   color: black;
    text-decoration: underline;
    background: transparent;
 }
 
 .pagination li a.current {
-   color: black;   
+   color: black;
    text-decoration: none;
 }
 
@@ -749,7 +747,7 @@ dl.metadata {
 }
 .fileinput:before {
   content: 'Select file';
-  display: inline-block;  
+  display: inline-block;
   box-shadow: 2px 2px 2px #333;
   background: #66cc66;
   border: none;
@@ -757,11 +755,11 @@ dl.metadata {
   padding: 5px 8px;
   outline: none;
   white-space: nowrap;
-  margin: 0px 12px; 
+  margin: 0px 12px;
   -webkit-user-select: none;color: black;
    -webkit-transition-duration: 0.2s;
    -moz-transition-duration: 0.2s;
-   transition-duration: 0.2s;  
+   transition-duration: 0.2s;
   cursor: pointer;
   font-size: 100%;
 }
@@ -771,9 +769,3 @@ dl.metadata {
 .fileinput:active:before {
   background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
 }
-
-
- 
-      
-	
-
